# spatial-gpu

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GeneSetScore.html  SpatialCorrelation.html  articles.html  generate_all_figures.py  generate_figures.py  generate_stccc_figures.py  hiresST_CRC.html  index.html  oldST_PDAC.html  reference.html  stCCC.html  stPattern.html  visium_BC.html
examples/: benchmark_comparison.py  quickstart.py  segmentation_example.py
scripts/: compare_intermediates.py  compare_r_vs_python.py  compare_visualizations.py  convert_to_h5ad.py  export_rda_to_python.R  extract_cosmx_data.R  extract_spacet_data.R  r_save_intermediates.R  r_save_mudan_intermediates.R  r_save_stage1.R  validate_3vst.R  validate_mudan.py  validate_mudan_detail.py  validate_r_equivalence.py  validate_stage1_steps.py
spatialgpu/: __init__.py
spatialgpu/benchmarks/: __init__.py  runner.py  synthetic.py
spatialgpu/core/: __init__.py  array_utils.py  backend.py  config.py
spatialgpu/data/: Ref_Normal_LIHC_lineageTree.json  Ref_Normal_LIHC_refProfiles.csv  Ref_Normal_LIHC_sigGenes.json  cancerDict_CNA_TARGET_OS.csv  cancerDict_CNA_TCGA_ACC.csv  cancerDict_CNA_TCGA_BLCA.csv  cancerDict_CNA_TCGA_BRCA.csv  cancerDict_CNA_TCGA_CESC.csv  cancerDict_CNA_TCGA_CHOL.csv  cancerDict_CNA_TCGA_COAD.csv  cancerDict_CNA_TCGA_CRC.csv  cancerDict_CNA_TCGA_ESCA.csv  cancerDict_CNA_TCGA_GBM.csv  cancerDict_CNA_TCGA_HNSC.csv  cancerDict_CNA_TCGA_KICH.csv  cancerDict_CNA_TCGA_KIRC.csv  cancerDict_CNA_TCGA_KIRP.csv  cancerDict_CNA_TCGA_LGG.csv  cancerDict_CNA_TCGA_LIHC.csv  cancerDict_CNA_TCGA_LUAD.csv  cancerDict_CNA_TCGA_LUSC.csv  cancerDict_CNA_TCGA_MESO.csv  cancerDict_CNA_TCGA_OV.csv  cancerDict_CNA_TCGA_PAAD.csv  cancerDict_CNA_TCGA_PCPG.csv  cancerDict_CNA_TCGA_PRAD.csv  cancerDict_CNA_TCGA_READ.csv  cancerDict_CNA_TCGA_SARC.csv  cancerDict_CNA_TCGA_SKCM.csv  cancerDict_CNA_TCGA_STAD.csv  cancerDict_CNA_TCGA_TGCT.csv  cancerDict_CNA_TCGA_THCA.csv  cancerDict_CNA_TCGA_UCEC.csv  cancerDict_CNA_TCGA_UCS.csv  cancerDict_CNA_TCGA_UVM.csv  cancerDict_expr_GSE139505_cSCC.csv  cancerDict_expr_GSE68799_NPC.csv  cancerDict_expr_TCGA_BLCA.csv  cancerDict_expr_TCGA_BRCA.csv  cancerDict_expr_TCGA_COAD.csv  (+18 more)
spatialgpu/deconvolution/: __init__.py  constr_optim.py  core.py  extensions.py  gene_set_score.py  interaction.py  io.py  mudan.py  reference.py  secact.py  spatial_correlation.py  visualization.py
spatialgpu/graph/: __init__.py  analysis.py  neighbors.py  ripley.py  utils.py
spatialgpu/io/: __init__.py  readers.py  writers.py
spatialgpu/segmentation/: __init__.py  core.py  evaluation.py  models.py  transcript.py  utils.py
spatialgpu/visualization/: __init__.py  plotting.py  segmentation.py
tests/: __init__.py  test_core.py  test_graph.py  test_real_datasets.py  test_segmentation.py
tests/test_deconvolution/: test_core.py  test_gene_set_score.py  test_integration.py  test_interaction.py  test_io.py  test_reference.py  (+3 more)
(+1 files in other folders)
